--- a/cw12-duffing.ipynb
+++ b/cw12-duffing.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "\n",
+    "# Cw12\n",
+    "### Abby Wheaton, Monica Hiemer, and Royal Cuevas\n",
+    "## Introduction"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -13,6 +25,30 @@
     "import numba as nb\n",
     "import matplotlib.pyplot as plt\n",
     "import sombrero as smb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "## Objectives \n",
+    "In this Assignement we consitered a ball of mass $m$ with horizontal coordinate $x$ rolling in a double-well potential $V(x) = x^4/4 - x^2/2$, also known as a sombrero. This potential produces a force $f_{\\text{hat}}(x) = -V'(x) = -x^3 + x$ on the rolling ball. We suppose the ball also has slight friction, so experiences a drag force $f_{\\text{drag}}(\\dot{x}) = -\\nu \\dot{x}$. These forces would eventually make the ball come to a stop, so we also constered shaking the hat periodically with a driving force $f_{\\text{drive}}(t) = F\\cos(\\omega t)$.\n",
+    "According to Newton's second law, the ball must satisfy the equation of motion: $$m\\ddot{x} = f_{\\text{hat}}(x) + f_{\\text{drag}}(\\dot{x}) + f_{\\text{drive}}(t) = x - x^3 - \\nu \\dot{x} + F\\cos(\\omega t)$$ \n",
+    "This system is known as a periodically driven nonlinear \"Duffing oscillator,\" and can be split into a set of two coupled first-order ODEs:\n",
+    "$$\\dot{x}(t) = y(t)$$\n",
+    "$$m\\dot{y}(t) = -\\nu y(t) + x(t) - x^3(t) + F\\cos(\\omega t)$$\n",
+    "In this assignment we used fourth order Runda Kutta for $m=1$, $\\nu = 0.25$, and $\\omega = 1$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "#### F = 0.18, X = -0.9, Y = 0, t$\\in[0,2\\pi\\, 50]$"
    ]
   },
   {
@@ -54,6 +90,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "#### F = 0.18, X = 0.9, Y = 0, t$\\in[0,2\\pi\\, 50]$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
@@ -89,6 +134,15 @@
    ],
    "source": [
     "smb.sombrero(.9,0,np.arange(0, 2*np.pi*50, 0.001), .18)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "#### F = 0.25, X = 0.2, Y = 0.1, t$\\in[0,2\\pi\\, 50]$"
    ]
   },
   {
@@ -130,6 +184,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "#### F = 0.25, X = 0.201, Y = 0.1, t$\\in[0,2\\pi\\, 50]$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
@@ -165,6 +228,15 @@
    ],
    "source": [
     "smb.sombrero(.201,0.1,np.arange(0, 2*np.pi*50, 0.001), .25)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "#### F = 0.4, X = 0, Y = 0, t$\\in[0,2\\pi\\, 50]$"
    ]
   },
   {
@@ -206,6 +278,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "#### F = 0.4, X = 0, Y = 0, t$\\in[0,2\\pi\\, 1000]$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
@@ -244,6 +325,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "#### F = 0.18, X = -0.9, Y = 0, t$\\in[0,2\\pi\\, 50]$ [-1]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
@@ -278,17 +368,6 @@
    ],
    "source": [
     "smb.sombrero(-.9,0,np.arange(0, 2*np.pi*50, 0.001), .18)[-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
-   "source": [
    ]
   }
  ],
